--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -1,10 +1,11 @@
+/* this is index */
+
 h1 {
-    color: blue;
+    color: #ffffff;
     text-align: center;
+background-color: #000000;
 }
-h2{
-    color:gray;
-}
+
 
 .grid-container{
     display:grid;
@@ -16,4 +17,58 @@ h2{
 .full-width{
     grid-column-start: 1;
     grid-column-end: 3;
+}
+
+
+.navbar {
+    overflow: hidden;
+    background-color: #808080;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.text-highlighting {
+    color: rgba(255, 0, 0, 0);
+}
+
+.navbar a {
+    /*float: left;*/
+    font-size: 1em;
+    color: #ffffff;
+    text-align: center;
+    padding: 1em 1em;
+    text-decoration: none;
+}
+p1 {
+    font-size: 30px;
+}
+/* photo gallery */
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
